@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   </head>
   <body id="top">
+    <script src="/data/js/changes.js" type="text/javascript"></script>
     <script src="/data/js/append.js" type="text/javascript"></script>
     <script src="/data/js/input.js" type="text/javascript"></script>
     <script src="/data/js/options.js" type="text/javascript"></script>
